crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__collections__acceptance_test_19_map_wrap_void.snap
---
source: crates/nash-codegen/src/build/tests/source/collections.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Literal exposing (..)\nimport Eq exposing (..)\ntype option 'a = None | Some 'a\nimpl Eq 'a => Eq (option 'a) where\n    eq a b =\n        case (a, b) of\n            (None, None) -> True\n            (Some x, Some y) -> eq x y\n            _ -> False\nmap opt f =\n    case opt of\n        None -> None\n        Some a -> Some (f a)\nnone : option int\nnone = None\nmain = eq (map none (\\_ -> ())) None\n"
---
--- unoptimized Core
let fromBool#10 : bool -> bool = \value#33 : bool -> value#33 in
let eq#13 : unit -> unit -> bool = \arg#34 : unit arg#35 : unit -> let match#37 : unit = arg#34 in
let match#36 : unit = arg#35 in
fromBool#10 true in
let eq#2 : Main.option 'erased -> Main.option 'erased -> bool = \a#8 : Main.option 'erased b#9 : Main.option 'erased -> let match#14 : (Main.option 'erased, Main.option 'erased) = constr 0 a#8 b#9 in
let leaf#20 : @delay bool = delay (fromBool#10 false) in
case@Tag match#14 of
  0 field#21 field#22 -> case@Tag field#21 of
    0 -> case@Tag field#22 of
      0 -> fromBool#10 true
      1 field#23 -> force leaf#20
    1 field#24 -> case@Tag field#22 of
      0 -> force leaf#20
      1 field#25 -> let x#11 : 'erased = field#24 in
      let y#12 : 'erased = field#25 in
      eq#13 x#11 y#12 in
let map#3 : Main.option 'erased -> ('erased -> 'erased) -> Main.option 'erased = \opt#26 : Main.option 'erased (f#27 : 'erased -> 'erased) -> let match#30 : Main.option 'erased = opt#26 in
case@Tag match#30 of
  0 -> constr 0
  1 field#31 -> let a#28 : 'erased = field#31 in
  (\field#29 : 'erased -> constr 1 field#29) (f#27 a#28) in
let none#4 : Main.option int = constr 0 in
let fromUnit#6 : unit -> unit = \value#32 : unit -> value#32 in
let main#1 : bool = eq#2 (map#3 none#4 (\arg#5 : int -> let match#7 : int = arg#5 in
fromUnit#6 ())) (constr 0) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_10
    [(lam eq_13
      [(lam eq_2
        [(lam map_3
          [(lam none_4
            [(lam fromUnit_6
              [(lam main_1 main_1)
                [[eq_2
                  [[map_3 none_4] (lam arg_5 [(lam match_7 [fromUnit_6 (con unit ())]) arg_5])]]
                  (constr 0)]])
              (lam value_32 value_32)])
            (constr 0)])
          (lam opt_26
            (lam f_27
              [(lam match_30
                (case
                  match_30
                  (constr 0)
                  (lam field_31
                    [(lam a_28 [(lam field_29 (constr 1 field_29)) [f_27 a_28]]) field_31])))
                opt_26]))])
        (lam a_8
          (lam b_9
            [(lam match_14
              [(lam leaf_20
                (case
                  match_14
                  (lam field_21
                    (lam field_22
                      (case
                        field_21
                        (case field_22 [fromBool_10 (con bool True)] (lam field_23 (force leaf_20)))
                        (lam field_24
                          (case
                            field_22
                            (force leaf_20)
                            (lam field_25 [(lam x_11 [(lam y_12 [[eq_13 x_11] y_12]) field_25]) field_24]))))))))
                (delay [fromBool_10 (con bool False)])])
              (constr 0 a_8 b_9)]))])
      (lam arg_34
        (lam arg_35 (case arg_34 (case arg_35 [fromBool_10 (con bool True)]))))])
    (lam value_33 value_33)])
--- optimized Core
true
--- optimized UPLC
(program 1.1.0 (con bool True))
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 928100, memory: 5900
