crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__collections__acceptance_test_22_filter_map.snap
---
source: crates/nash-codegen/src/build/tests/source/collections.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Literal exposing (..)\nimport Eq exposing (..)\ntype option 'a = None | Some 'a\nimpl Eq 'a => Eq (option 'a) where\n    eq a b =\n        case (a, b) of\n            (None, None) -> True\n            (Some x, Some y) -> eq x y\n            _ -> False\nfoldr xs f zero =\n    case xs of\n        [] -> zero\n        x :: rest -> f x (foldr rest f zero)\nfilterMap xs f =\n    foldr xs (\\x ys ->\n        case f x of\n            None -> ys\n            Some y -> mkCons y ys\n    ) []\nempty : list int\nempty = []\nmain = eq (filterMap empty (\\_ -> Some 42)) []\n"
---
--- unoptimized Core
let fromBool#11 : bool -> bool = \value#35 : bool -> value#35 in
let eq#19 : int -> int -> bool = equalsInteger in
letrec
  eq#2 : list 'erased -> list 'erased -> bool [static []] = \xs#9 : list 'erased ys#10 : list 'erased -> let match#23 : list 'erased = xs#9 in
  case@List match#23 of
    Nil -> let match#12 : list 'erased = ys#10 in
    case@List match#12 of
      Nil -> fromBool#11 true
      Cons field#13 field#14 -> fromBool#11 false
    Cons field#24 field#25 -> let x#15 : 'erased = field#24 in
    let restX#16 : list 'erased = field#25 in
    let match#20 : list 'erased = ys#10 in
    case@List match#20 of
      Nil -> fromBool#11 false
      Cons field#21 field#22 -> let y#17 : 'erased = field#21 in
      let restY#18 : list 'erased = field#22 in
      case@Bool eq#19 x#15 y#17 of
        True -> eq#2 restX#16 restY#18
        False -> false
in
letrec
  foldr#28 : list 'erased -> ('erased -> 'erased -> 'erased) -> 'erased -> 'erased [static [1, 2]] = \xs#36 : list 'erased (f#37 : 'erased -> 'erased -> 'erased) zero#38 : 'erased -> let match#41 : list 'erased = xs#36 in
  case@List match#41 of
    Nil -> zero#38
    Cons field#42 field#43 -> let x#39 : 'erased = field#42 in
    let rest#40 : list 'erased = field#43 in
    f#37 x#39 (foldr#28 rest#40 f#37 zero#38)
in
let filterMap#3 : list 'erased -> ('erased -> Main.option int) -> list int = \xs#26 : list 'erased (f#27 : 'erased -> Main.option int) -> foldr#28 xs#26 (\x#29 : 'erased ys#30 : list int -> let match#32 : Main.option int = f#27 x#29 in
case@Tag match#32 of
  0 -> ys#30
  1 field#33 -> let y#31 : int = field#33 in
  mkCons y#31 ys#30) (con (list integer) []) in
let empty#4 : list int = (con (list integer) []) in
let fromInt#7 : int -> int = \value#34 : int -> value#34 in
let main#1 : bool = eq#2 (filterMap#3 empty#4 (\arg#5 : int -> let match#8 : int = arg#5 in
(\field#6 : int -> constr 1 field#6) (fromInt#7 42))) (con (list integer) []) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_11
    [(lam eq_19
      [(lam eq_2
        [(lam foldr_28
          [(lam filterMap_3
            [(lam empty_4
              [(lam fromInt_7
                [(lam main_1 main_1)
                  [[eq_2
                    [[filterMap_3 empty_4]
                      (lam arg_5
                        [(lam match_8 [(lam field_6 (constr 1 field_6)) [fromInt_7 (con integer 42)]])
                          arg_5])]]
                    (con (list integer) [])]])
                (lam value_34 value_34)])
              (con (list integer) [])])
            (lam xs_26
              (lam f_27
                [[[foldr_28 xs_26]
                  (lam x_29
                    (lam ys_30
                      [(lam match_32
                        (case
                          match_32
                          ys_30
                          (lam field_33 [(lam y_31 [[(force (builtin mkCons)) y_31] ys_30]) field_33])))
                        [f_27 x_29]]))]
                  (con (list integer) [])]))])
          (lam xs_36
            (lam f_37
              (lam zero_38
                [[(lam self_44 [self_44 self_44])
                  (lam self_44
                    (lam xs_36
                      [(lam match_41
                        (case
                          match_41
                          (lam field_42
                            (lam field_43
                              [(lam x_39 [(lam rest_40 [[f_37 x_39] [[self_44 self_44] rest_40]]) field_43])
                                field_42]))
                          zero_38))
                        xs_36]))]
                  xs_36])))])
        [(lam self_45 [self_45 self_45])
          (lam self_45
            (lam xs_9
              (lam ys_10
                [(lam match_23
                  (case
                    match_23
                    (lam field_24
                      (lam field_25
                        [(lam x_15
                          [(lam restX_16
                            [(lam match_20
                              (case
                                match_20
                                (lam field_21
                                  (lam field_22
                                    [(lam y_17
                                      [(lam restY_18
                                        (case
                                          [[eq_19 x_15] y_17]
                                          (con bool False)
                                          [[[self_45 self_45] restX_16] restY_18]))
                                        field_22])
                                      field_21]))
                                [fromBool_11 (con bool False)]))
                              ys_10])
                            field_25])
                          field_24]))
                    [(lam match_12
                      (case
                        match_12
                        (lam field_13 (lam field_14 [fromBool_11 (con bool False)]))
                        [fromBool_11 (con bool True)]))
                      ys_10]))
                  xs_9])))]])
      (builtin equalsInteger)])
    (lam value_35 value_35)])
--- optimized Core
letrec
  eq#47 : list 'erased -> list 'erased -> bool [static []] = \xs#48 : list 'erased ys#49 : list 'erased -> case@List xs#48 of
    Nil -> case@List ys#49 of
      Nil -> true
      Cons field#52 field#53 -> false
    Cons field#54 field#55 -> case@List ys#49 of
      Nil -> false
      Cons field#59 field#60 -> let anf#89 : bool = equalsInteger field#54 field#59 in
      case@Bool anf#89 of
        True -> eq#47 field#55 field#60
        False -> false
in
letrec
  worker#88 : list 'erased -> 'erased [static []] = \xs#87 : list 'erased -> case@List xs#87 of
    Nil -> (con (list integer) [])
    Cons field#68 field#69 -> let anf#91 : 'erased = worker#88 field#69 in
    mkCons 42 anf#91
in
let anf#93 : list int = worker#88 (con (list integer) []) in
eq#47 anf#93 (con (list integer) [])
--- optimized UPLC
(program 1.1.0
  [(lam builtin_26
    [(lam eq_17
      [(lam worker_24
        [(lam anf_25 [[eq_17 anf_25] (con (list integer) [])])
          [worker_24 (con (list integer) [])]])
        [(lam self_18 [self_18 self_18])
          (lam self_19
            (lam xs_20
              (case
                xs_20
                (lam field_21
                  (lam field_22
                    [(lam anf_23 [[builtin_26 (con integer 42)] anf_23])
                      [[self_19 self_19] field_22]]))
                (con (list integer) []))))]])
      [(lam self_6 [self_6 self_6])
        (lam self_7
          (lam xs_8
            (lam ys_9
              (case
                xs_8
                (lam field_12
                  (lam field_13
                    (case
                      ys_9
                      (lam field_14
                        (lam field_15
                          [(lam anf_16
                            (case anf_16 (con bool False) [[[self_7 self_7] field_13] field_15]))
                            [[(builtin equalsInteger) field_12] field_14]]))
                      (con bool False))))
                (case ys_9 (lam field_10 (lam field_11 (con bool False))) (con bool True))))))]])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 1264100, memory: 8000
